# crewai-examples

./: .gitignore  pyproject.toml  terraform_parser.py  terraform_parser_openai.py  terraform_parser_openai_crew.py  terraform_parser_openai_prompt.py
event_planner/: event_list.py  event_planner.py  utils.py  venue_details.json
terraform-project/: custom.tf  s3.tf
